--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -672,11 +672,11 @@
     <string name="warning_if_month_set_year_must_be">Pokud je zadán měsíc, musí být také uveden rok.</string>
     <string name="warning_image_copy_failed">Obrázek nelze zkopírovat.</string>
     <string name="warning_image_not_found">Obrázek nebyl nalezen.</string>
-    <string name="warning_immediate_global_changes">UPOZORNĚNÍ: Všechny uložené změny se aplikují u všech záznamů.</string>
-    <string name="warning_import_csv">Pozor: Importovaná data mohou upravit existující záznamy knih - k takové situaci dojde v případě, že není vyplněno uuid, a id v importovaném souboru je totožné s již existujícím id. Doporučujeme proto zkontrolovat - a případně upravit - toto pole v exportovaném souboru. Pokud byl vytvořen nový záznam, nebo jsou importovány další knihy, tak se ujistěte, že je vyplněno uuid, nebo že pole id je prázdné.</string>
+    <string name="warning_immediate_global_changes">UPOZORNĚNÍ: Uložené změny se okamžitě použijí na všechny knihy.</string>
+    <string name="warning_import_csv">UPOZORNĚNÍ: Import dat může aktualizovat existující záznamy knih novými informacemi, pokud není přítomen sloupec UUID a ID v importním souboru je stejné jako existující ID. To je obvykle v pořádku, pokud jste změnili pole v exportovaném souboru. Pokud jste vytvořili nový záznam knihy nebo importujete knihy někoho jiného, ujistěte se, že je pole UUID přítomno nebo že je pole ID prázdné.</string>
     <string name="warning_import_csv_unescaped_quote">Znak bez uvozovek v řádku %1$d, pozice %2$d</string>
-    <string name="warning_import_failed_for_lines_lots">Analýza linek se nezdařila pro linky \n%1$s\n a %2$d dalších.</string>
-    <string name="warning_import_failed_for_lines_some">Analýza linek se nezdařila pro řádky \n%1$s\n</string>
+    <string name="warning_import_failed_for_these_books_and_more">a %1$d dalších.</string>
+    <string name="warning_import_failed_for_these_books">Import těchto knih/řádků se nezdařil:</string>
     <string name="warning_no_editions">K dispozici nejsou žádné další informace o vydání.</string>
     <string name="warning_no_matching_book_found">Nebyla nalezena odpovídající kniha</string>
     <string name="warning_no_search_data_for_active_sites">Pro aktivní weby neexistují žádná platná data vyhledávání.</string>
