--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -17,9 +18,11 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
-<!ENTITY APP_NAME "NeverTooManyBooks">
-]>
+  -->
+
+<!DOCTYPE resources [
+    <!ENTITY APP_NAME "NeverTooManyBooks">
+    ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d libro</item>
@@ -661,11 +664,11 @@
     <string name="warning_if_month_set_year_must_be">Se si indica il mese, occorre indicare anche l’anno.</string>
     <string name="warning_image_copy_failed">L’immagine non può essere copiata.</string>
     <string name="warning_image_not_found">L’immagine non è stata trovata.</string>
-    <string name="warning_immediate_global_changes">NOTA: Tutte le modifiche salvate si applicano istantaneamente e globalmente.</string>
-    <string name="warning_import_csv">Attenzione. L’importazione dei dati potrebbe aggiornare i record esistenti con nuove informazioni se manca la colonna uuid e l’id nel file di importazione è identico a un id esistente. Ciò è corretto se hai modificato un campo nel file di esportazione. Se hai registrato un nuovo libro, o stai importando libri di qualcun altro, assicurati che vi sia il campo uuid o il campo id sia vuoto.</string>
+    <string name="warning_immediate_global_changes">ATTENZIONE: le modifiche salvate vengono applicate immediatamente a tutti i libri.</string>
+    <string name="warning_import_csv">AVVERTENZA: L’importazione dei dati può aggiornare i record del libro esistenti con nuove informazioni se la colonna UUID non è presente e l’ID nel file di importazione è lo stesso di un ID esistente. Questo di solito va bene se si è modificato un campo in un file esportato. Se si è creato un nuovo record di libro o si stanno importando i libri di qualcun altro, assicurarsi che il campo UUID sia presente o che il campo ID sia vuoto.</string>
     <string name="warning_import_csv_unescaped_quote">Carattere virgolette senza caratteri di escape nella riga %1$d, posizione %2$d</string>
-    <string name="warning_import_failed_for_lines_lots">Analisi non riuscita per le righe \n%1$s\n e altri %2$d.</string>
-    <string name="warning_import_failed_for_lines_some">Analisi non riuscita per le righe \n%1$s\n</string>
+    <string name="warning_import_failed_for_these_books_and_more">e altri %1$d.</string>
+    <string name="warning_import_failed_for_these_books">L’importazione non è riuscita per questi libri/rubriche:</string>
     <string name="warning_no_editions">Nessuna informazione aggiuntiva disponibile.</string>
     <string name="warning_no_matching_book_found">Nessuna corrispondenza trovata</string>
     <string name="warning_no_search_data_for_active_sites">Nessun dato di ricerca valido per siti attivi.</string>
