--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -663,14 +663,11 @@
     <string name="warning_if_month_set_year_must_be">Eğer bir ay belirtmiş iseniz yıl da belirtmelisiniz.</string>
     <string name="warning_image_copy_failed">Görüntü kopyalanamadı.</string>
     <string name="warning_image_not_found">Resim bulunamadı.</string>
-    <string name="warning_immediate_global_changes">Not: Tüm kaydedilmiş değişiklikler anında ve genel olarak uygulanır.</string>
-    <string name="warning_import_csv">Uyarı: Bilgileri içe aktarırken eğer içe aktardığınız dosyaların ID numarası var olan bir kitabın ID’si ile aynı ise, varolan kitap verilerinin üstüne yazılmasına neden olabilir. Eğer dışa aktarılmış bir dosyada bir giriyi değiştirdiyseniz bu sorun değildir; ancak yeni bir kitap girişi oluşturuyorsanız ID bölümünün boş olduğundan emin olun.</string>
+    <string name="warning_immediate_global_changes">UYARI: Kaydedilen değişiklikler anında tüm kitaplara uygulanır.</string>
+    <string name="warning_import_csv">UYARI: UUID sütunu mevcut değilse ve içe aktarma dosyasındaki kimlik mevcut bir kimlikle aynıysa, verilerin içe aktarılması mevcut defter kayıtlarını yeni bilgilerle güncelleyebilir. Dışa aktarılan bir dosyadaki bir alanı değiştirdiyseniz bu genellikle sorun olmaz. Yeni bir defter kaydı oluşturduysanız veya başka birinin defterlerini içe aktarıyorsanız, UUID alanının mevcut olduğundan veya ID alanının boş olduğundan emin olun.</string>
     <string name="warning_import_csv_unescaped_quote">%1$d. Satırda çıkış karakteri olmayan alıntı karakter, %2$d. konum</string>
-    <string name="warning_import_failed_for_lines_lots">Ayrıştırma işlemi\n%1$s\n satırları ve %2$d diğerleri için başarısız oldu.</string>
-    <string name="warning_import_failed_for_lines_some">Ayrıştırma
-\n%1$s
-\n satırları için başarısız oldu.
-\n</string>
+    <string name="warning_import_failed_for_these_books_and_more">ve %1$d tane daha.</string>
+    <string name="warning_import_failed_for_these_books">Bu kitaplar/satırlar için içe aktarma başarısız oldu:</string>
     <string name="warning_no_editions">Ek yayın bilgisi yok.</string>
     <string name="warning_no_matching_book_found">Eşleşen kitap bulunamadı</string>
     <string name="warning_no_search_data_for_active_sites">Etkin siteler için geçerli arama verisi yok.</string>
